--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@
 *.tar.gz
 *.rar
 hs_err_pid*
-*/nbproject/private/
-*/build/
-*/nbbuild/
-*/dist/
-*/nbdist/
-*/.nb-gradle/
-*/nbactions.xml
+*nbproject/private/
+*build/
+*nbbuild/
+*dist/
+*nbdist/
+*.nb-gradle/
+*nbactions.xml
 out/
+/chatroom/nbproject/
